--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,49 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Login - Naucratis</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/registro-login.css">
 </head>
 <body>
 <!-- Form of login -->
 <div class="container">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <h1>Inicio de Sesión - Naucratis</h1>
-            <form th:action="@{/login}" method="post">
-                <!-- error message -->
-                <div th:if="${param.error}">
-                    <div class="alert alert-danger">Usuario y/o contraseña incorrecta</div>
+        <div class="col-lg-10 col-xl-9 mx-auto">
+            <div class="card card-signin flex-row my-5">
+                <div class="card-img-left d-none d-md-flex">
+                    <!-- Background image for card set in CSS! -->
                 </div>
+                <div class="card-body">
+                    <h5 class="card-title text-center">Inicio de Sesión - Naucratis</h5>
+                    <form class="form-signin" th:action="@{/login}" method="post">
 
-                <!-- logout message -->
-                <div th:if="${param.logout}">
-                    <div class="alert alert-info">Has finalizado la sesión.</div>
-                </div>
-
-                <div class="form-group">
-                    <label for="username">Correo</label> :
-                    <input type="text" class="form-control" id="username" name="username"
-                           placeholder="Ingrese el correo electrónico" autofocus="autofocus">
-                </div>
-
-                <div class="form-group">
-                    <label for="password">Password</label> :
-                    <input type="password" class="form-control" id="password" name="password"
-                           placeholder="Ingrese la contraseña">
-                </div>
-
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3">
-                            <input type="submit" name="login-submit" id="login-submit"
-                                   class="form-control btn btn-primary" value="Ingresar">
+                        <!-- error message -->
+                        <div th:if="${param.error}">
+                            <div class="alert alert-danger">Usuario y/o contraseña incorrecta</div>
                         </div>
-                    </div>
+
+                        <!-- logout message -->
+                        <div th:if="${param.logout}">
+                            <div class="alert alert-info">Has finalizado la sesión.</div>
+                        </div>
+
+                        <hr class="my-4">
+                        <div class="form-group">
+                            <label for="username">Correo</label> :
+                            <input type="text" class="form-control" id="username" name="username"
+                                   placeholder="Ingrese el correo electrónico" autofocus="autofocus">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password">Password</label> :
+                            <input type="password" class="form-control" id="password" name="password"
+                                   placeholder="Ingrese la contraseña">
+                        </div>
+
+                        <hr class="my-4">
+
+                                    <button type="submit" name="login-submit" id="login-submit"
+                                           class="btn btn-lg btn-primary btn-block text-uppercase">Ingresar</button>
+                    </form>
+                    <span class="d-block text-center mt-2 small">¿No estás registrado? <a href="/" th:href="@{/registro}">Registrate aquí</a></span>
                 </div>
-            </form>
-            <div class="form-group">
-                <span>¿No estás registrado? <a href="/" th:href="@{/registration}">Registrate aquí</a></span>
             </div>
         </div>
     </div>
