--- a/src/main/resources/static/css/registro-login.css
+++ b/src/main/resources/static/css/registro-login.css
@@ -5,7 +5,7 @@
 
 body {
     background: #007bff;
-    background: linear-gradient(to right, #27401e, #2e5221);
+    background: linear-gradient(to right, #41785a, #448e64);
 }
 
 .card-signin {
