--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,7 +47,7 @@
                                     <button type="submit" name="login-submit" id="login-submit"
                                            class="btn btn-lg btn-primary btn-block text-uppercase">Ingresar</button>
                     </form>
-                    <span class="d-block text-center mt-2 small">¿No estás registrado? <a href="/" th:href="@{/registro}">Registrate aquí</a></span>
+                    <span class="d-block text-center mt-2 small">¿No estás registrado? <a href="/" th:href="@{/registro?role=client}">Registrate aquí</a></span>
                 </div>
             </div>
         </div>
