--- a/src/main/resources/templates/administrator/register/form_book.html
+++ b/src/main/resources/templates/administrator/register/form_book.html
@@ -30,52 +30,81 @@
           </li>
       </ul>
   </nav>
-    <form method="POST" th:action="@{/register/book}" id="registrationBookForm">
+
+  <form form method="POST" th:action="@{'/register/search_book/' + ${nameLibrary}}" id="isbn">
+      <label>Buscar libro: </label>
+      <input type="search" name="isbn">
+      <button type="submit"> Buscar </button>
+  </form>
+
+  <img th:if="${book != null}" width="200px" th:src="'data:image/png;base64,' + ${book.getImageBase64()}">
+
+  <form method="POST" th:action="@{/register/book}" id="registrationBookForm" enctype="multipart/form-data">
         <input type="hidden" th:value="${nameLibrary}" name="nameLibrary">
         <table>
             <tr>
                 <td><label for="isbn">ISBN: </label></td>
-                <td><input type="text" name="isbn"/></td>
+                <td><input type="text" name="isbn" th:value="${book != null? book.isbn:''}"/></td>
             </tr>
             <tr>
                 <td><label for="name">Nombre: </label></td>
-                <td><input type="text" name="name"/></td>
+                <td><input type="text" name="name" th:value="${book != null? book.name:''}"/></td>
             </tr>
             <tr>
                 <td><label for="list_authors">Autores: </label></td>
-                <td><input type="text" name="list_authors"/></td>
+                <td><input type="text" name="list_authors" th:value="${book != null? book.convertListAuthorsToString():''}"/></td>
             </tr>
             <tr>
                 <td><label for="editorial">Editorial: </label></td>
-                <td><input type="text" name="editorial"/></td>
+                <td><input type="text" name="editorial" th:value="${book != null? book.editorial:''}"/></td>
             </tr>
             <tr>
                 <td><label for="category">Categoria: </label></td>
-                <td><input type="text" name="category"/></td>
+                <td><input type="text" name="category" th:value="${book != null? book.category:''}"/></td>
             </tr>
             <tr>
                 <td><label for="edition">Edición: </label></td>
-                <td><input type="text" name="edition"/></td>
+                <td><input type="text" name="edition" th:value="${book != null? book.edition:''}"/></td>
             </tr>
             <tr>
-                <td><label for="condition">Condición: </label></td>
-                <td><input type="text" name="condition"/></td>
+                <td><label for="numPages">Paginas: </label></td>
+                <td><input type="text" name="numPages" th:value="${book != null? book.numPages:''}"/></td>
             </tr>
             <tr>
                 <td><label for="length">Largo: </label></td>
-                <td><input type="text" name="length"/></td>
+                <td><input type="text" name="length" th:value="${book != null? book.length:''}"/></td>
             </tr>
             <tr>
                 <td><label for="width">Ancho: </label></td>
-                <td><input type="text" name="width"/></td>
+                <td><input type="text" name="width" th:value="${book != null? book.width:''}"/></td>
             </tr>
             <tr>
                 <td><label for="height">Alto: </label></td>
-                <td><input type="text" name="height"/></td>
+                <td><input type="text" name="height" th:value="${book != null? book.height:''}"/></td>
             </tr>
             <tr>
                 <td><label for="price">Precio: </label></td>
                 <td><input type="text" name="price"/></td>
+            </tr>
+            <tr>
+                <td><label for="site">Sitio: </label></td>
+                <td>
+                    <select name="site">
+                        <div th:each="site: ${sites}">
+                            <option th:value="${site.address}">
+                                <span th:text="${site.address}"> DIRECCIÓN </span>
+                            </option>
+                        </div>
+                    </select>
+                </td>
+            </tr>
+            <tr th:if="${book == null}">
+                <td><label for="cover">Portada: </label></td>
+                <td><input type="file" name="cover"/></td>
+            </tr>
+            <tr>
+                <td><label for="quantity">Cantidad: </label></td>
+                <td><input type="text" name="quantity"></td>
             </tr>
             <tr>
                 <td><button type="submit"> Registrar</button></td>
