--- a/src/main/resources/templates/user_no_register/start_session/form_customer.html
+++ b/src/main/resources/templates/user_no_register/start_session/form_customer.html
@@ -18,7 +18,7 @@
 </header>
 <h1>Registro cliente</h1>
 <img width="200px" th:src="@{/images/Naucratis.png}"/>
-<form method="POST" th:action="@{/register/customer}" id="registerCustomerForm">
+<form method="POST" th:action="@{/register/customer}" id="registerCustomerForm" enctype="multipart/form-data">
     <table>
         <tr>
             <td><label for="name">Nombre: </label></td>
@@ -43,6 +43,10 @@
         <tr>
             <td><label for="password">Contraseña: </label></td>
             <td><input type="password" name="password"/></td>
+        </tr>
+        <tr>
+            <td><label for="image">Foto de perfil: </label></td>
+            <td><input type="file" name="image"/></td>
         </tr>
         <tr>
             <td> <input type="submit" value="Registrar"/> </td>
