--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -20,7 +20,7 @@
         <div class="card mt-5">
             <div class="card-header text-center"><h4>Subida imagenes</h4></div>
             <div class="card-body">
-                <form th:action="@{/}" th:object="${book}" method="POST" enctype="multipart/form-data">
+                <form th:action="@{/}" th:object="${libro}" method="POST" enctype="multipart/form-data">
 
                     <div clas="form-group">
                         <label>ISBN</label>
@@ -41,10 +41,6 @@
                     <div clas="form-group">
                         <label>Estado</label>
                         <input type="text" th:field="*{status}" class="form-control"/>
-                    </div>
-                    <div clas="form-group">
-                        <label>Precio</label>
-                        <input type="long" th:field="*{price}" class="form-control"/>
                     </div>
                     <div clas="form-group">
                         <label>Disponible</label>
