--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="base :: head"></head>
+<head th:fragment="head">
+    <meta charset="utf-8">
+    <title>Naucratis</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous">
+</head>>
 
 <body>
 <div class="container mt-5">
-    <div th:each="book: ${book}">
+    <div th:each="book: ${libro}">
         <div class="row justiy-content-center">
             <div class="card m-1 p-1" style="width:30%">
                 <div class="row">
                     <div class="col-md-7">
                         <img class="float-left ml-1" th:src="@{'/uploads/'+${book.cover}}"
-                             th:alt="${book.cover}" style="max-width: 90%;max-height: 100%"/>
+                             th:alt="${book.cover}" style="max-width: 90%;max-height: 100%;"/>
                     </div>
                     <div class="col-md-5 mt-3">
                         <h3 th:text="${book.name}"></h3>
