Correccion de errores

--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:fragment="head">
+<head>
     <meta charset="utf-8">
     <title>Naucratis</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -55,10 +55,6 @@
                 </form>
             </div>
         </div>
-    </div>
-
-    <div class="m-5">
-        <a th:href="@{/listar}"><button class="btn btn-primary">Ver Fotos</button></a>
     </div>
 
 </div>
