--- a/src/main/resources/templates/pagina-principal.html
+++ b/src/main/resources/templates/pagina-principal.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <!--Especificaiones de la pantalla-->
     <meta charset="utf-8">
@@ -308,91 +308,17 @@
                 <div class="btn-block col-md-2"> </div>
 
                 <!--Fila de libros 1-->
-                <!--
                 <div class="d-flex justify-content-md-around row">
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
+                    <div th:each="book: ${libro}">
+                        <div class="btn-block col-md-2">
+                            <a class="nav-link" href="blanco.html" role="button">
+                                <img class="img-thumbnail" th:src="@{'/uploads/'+${book.cover}}"
+                                     th:alt="${book.cover}" style="max-width: 90%;max-height: 100%;"/>
+                            </a>
+                        </div>
                     </div>
                 </div>
 
-                <div class="d-flex justify-content-md-around row">
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                </div>
-
-                <div class="d-flex justify-content-md-around row">
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                    <div class="btn-block col-md-2">
-                        <a class="nav-link" href="blanco.html" role="button">
-                            <img src="https://edit.org/images/cat/portadas-libros-big-2019101610.jpg" class="img-thumbnail" alt="Cinque Terre">
-                        </a>
-                    </div>
-                </div>
-                -->
             </div>
         </div>
     </div>
