--- a/src/main/resources/templates/user_no_register/start_session/form_customer.html
+++ b/src/main/resources/templates/user_no_register/start_session/form_customer.html
@@ -1,57 +1,77 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <title>Registro cliente</title>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>Registro - Cliente</title>
+
+    <!--Configuración de estilos-->
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link th:href="@{/css/estilos-Naucratis.css}" rel="stylesheet">
+    <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
 </head>
-<body>
-<header>
-    <table>
-        <td>
-            <img width="100px" th:src="@{/images/Naucratis.png}">
-        </td>
-        <td>
-            <h1> Naucratis </h1>
-        </td>
-    </table>
-</header>
-<h1>Registro cliente</h1>
-<img width="200px" th:src="@{/images/Naucratis.png}"/>
-<form method="POST" th:action="@{/register/customer}" id="registerCustomerForm" enctype="multipart/form-data">
-    <table>
-        <tr>
-            <td><label for="name">Nombre: </label></td>
-            <td><input type="text" name="name"/></td>
-        </tr>
-        <tr>
-            <td><label for="city">Ciudad: </label></td>
-            <td><input type="text" name="city"/></td>
-        </tr>
-        <tr>
-            <td><label for="address">Dirección: </label></td>
-            <td><input type="text" name="address"/></td>
-        </tr>
-        <tr>
-            <td><label for="phone">Telefono: </label></td>
-            <td><input type="text" name="phone"/></td>
-        </tr>
-        <tr>
-            <td><label for="email">Correo: </label></td>
-            <td><input type="text" name="email"/></td>
-        </tr>
-        <tr>
-            <td><label for="password">Contraseña: </label></td>
-            <td><input type="password" name="password"/></td>
-        </tr>
-        <tr>
-            <td><label for="image">Foto de perfil: </label></td>
-            <td><input type="file" name="image"/></td>
-        </tr>
-        <tr>
-            <td> <input type="submit" value="Registrar"/> </td>
-        </tr>
-    </table>
-</form>
+
+<body class="bg-gradient-primary">
+
+<div class="container">
+
+    <div class="card o-hidden border-0 shadow-lg my-5">
+        <div class="card-body p-0">
+            <!-- Nested Row within Card Body -->
+            <div class="row">
+                <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
+                <div class="col-lg-7">
+                    <div class="p-5">
+                        <div class="text-center">
+                            <h1 class="h4 text-gray-900 mb-4">Crea una cuenta como Cliente</h1>
+                        </div>
+                        <form class="user" method="POST" th:action="@{/register/customer}" id="registerCustomerForm" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <input type="text" name="name" class="form-control form-control-user"
+                                       id="exampleName" placeholder="Nombre">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="city" class="form-control form-control-user"
+                                       id="exampleCity" placeholder="Ciudad">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="address" class="form-control form-control-user"
+                                       id="exampleAddress" placeholder="Dirección">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="phone" class="form-control form-control-user"
+                                       id="examplePhone" placeholder="Teléfono">
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="email" class="form-control form-control-user"
+                                       id="exampleEmail" placeholder="Correo electrónico">
+                            </div>
+                            <div class="form-group">
+                                <input type="password" name="password" class="form-control form-control-user"
+                                       id="examplePassword" placeholder="Contraseña">
+                            </div>
+                            <div class="form-group">
+                                <label for="image">Foto de perfil: </label>
+                                <input type="file" name="image" class="form-control form-control-file"
+                                       id="image" placeholder="Foto de perfil">
+                            </div>
+                            <input type="submit" class="btn btn-primary btn-user btn-block" value="Registrar"/>
+                        </form>
+                        <hr>
+                        <div class="text-center">
+                            <a class="small" th:href="@{/login}">¿Ya tienes una cuenta? Inicia sesión</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
 </body>
 </html>
